crates/parser/tests/snapshots/block_string_multi_folded_strip_none_wsln_emptyln_eof_nonl.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-folded-strip-none-wsln-emptyln-eof-nonl

## Input

```
key >-
  hello
 
  world

```

## CST

```
SOURCE_FILE@0..25
  ENTRY@0..25
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..24
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      SPACE@7..9 "  "
      LINE_STRING@9..14
        STRING@9..14 "hello"
      NEWLINE@14..15 "\n"
      SPACE@15..16 " "
      LINE_STRING@16..16
      NEWLINE@16..17 "\n"
      SPACE@17..19 "  "
      LINE_STRING@19..24
        STRING@19..24 "world"
    NEWLINE@24..25 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: STRING@9..14 "hello",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@19..24 "world",
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
