crates/parser/tests/snapshots/block_string_multi_folded_strip_wsln_none_wsln_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-folded-strip-wsln-none-wsln-dedent

## Input

```
key >-
 
  hello
  world
 
other val

```

## CST

```
SOURCE_FILE@0..37
  ENTRY@0..27
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..26
      BLOCK_STRING_HEADER@4..7
        GT@4..5 ">"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      SPACE@7..8 " "
      LINE_STRING@8..8
      NEWLINE@8..9 "\n"
      SPACE@9..11 "  "
      LINE_STRING@11..16
        STRING@11..16 "hello"
      NEWLINE@16..17 "\n"
      SPACE@17..19 "  "
      LINE_STRING@19..24
        STRING@19..24 "world"
      NEWLINE@24..25 "\n"
      SPACE@25..26 " "
      LINE_STRING@26..26
    NEWLINE@26..27 "\n"
  ENTRY@27..37
    WORD_KEY@27..32
      WORD@27..32 "other"
    SPACE@32..33 " "
    LINE_STRING@33..36
      STRING@33..36 "val"
    NEWLINE@36..37 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: GT@4..5 ">",
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@11..16 "hello",
                    },
                    LineString {
                        string: STRING@19..24 "world",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@27..32 "other",
            },
            value: LineString {
                string: STRING@33..36 "val",
            },
        },
    ],
}
```

vim:ft=markdown
