crates/parser/tests/snapshots/block_string_multi_literal_clip_wsln_wsln_none_dedent.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-literal-clip-wsln-wsln-none-dedent

## Input

```
key |
  hello
 
  world
other val

```

## CST

```
SOURCE_FILE@0..34
  ENTRY@0..23
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..23
      BLOCK_STRING_HEADER@4..6
        PIPE@4..5 "|"
        NEWLINE@5..6 "\n"
      SPACE@6..8 "  "
      LINE_STRING@8..13
        STRING@8..13 "hello"
      NEWLINE@13..14 "\n"
      SPACE@14..15 " "
      LINE_STRING@15..15
      NEWLINE@15..16 "\n"
      SPACE@16..18 "  "
      LINE_STRING@18..23
        STRING@18..23 "world"
  NEWLINE@23..24 "\n"
  ENTRY@24..33
    WORD_KEY@24..29
      WORD@24..29 "other"
    SPACE@29..30 " "
    LINE_STRING@30..33
      STRING@30..33 "val"
  NEWLINE@33..34 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: none,
                },
                lines: [
                    LineString {
                        string: STRING@8..13 "hello",
                    },
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@18..23 "world",
                    },
                ],
            },
        },
        Entry {
            key: WordKey {
                word: WORD@24..29 "other",
            },
            value: LineString {
                string: STRING@30..33 "val",
            },
        },
    ],
}
```

vim:ft=markdown
