crates/parser/tests/snapshots/block_string_multi_literal_strip_emptyln_none_emptyln_eof.snap
---
source: crates/parser/tests/snapshots.rs
---
# block-string-multi-literal-strip-emptyln-none-emptyln-eof

## Input

```
key |-

  hello
  world


```

## CST

```
SOURCE_FILE@0..25
  ENTRY@0..24
    WORD_KEY@0..3
      WORD@0..3 "key"
    SPACE@3..4 " "
    BLOCK_STRING@4..24
      BLOCK_STRING_HEADER@4..7
        PIPE@4..5 "|"
        MINUS@5..6 "-"
        NEWLINE@6..7 "\n"
      LINE_STRING@7..7
      NEWLINE@7..8 "\n"
      SPACE@8..10 "  "
      LINE_STRING@10..15
        STRING@10..15 "hello"
      NEWLINE@15..16 "\n"
      SPACE@16..18 "  "
      LINE_STRING@18..23
        STRING@18..23 "world"
      NEWLINE@23..24 "\n"
      LINE_STRING@24..24
  NEWLINE@24..25 "\n"
```

## AST

```
SourceFile {
    shebang: none,
    items: [
        Entry {
            key: WordKey {
                word: WORD@0..3 "key",
            },
            value: BlockString {
                header: BlockStringHeader {
                    style: PIPE@4..5 "|",
                    chomp: MINUS@5..6 "-",
                },
                lines: [
                    LineString {
                        string: none,
                    },
                    LineString {
                        string: STRING@10..15 "hello",
                    },
                    LineString {
                        string: STRING@18..23 "world",
                    },
                    LineString {
                        string: none,
                    },
                ],
            },
        },
    ],
}
```

vim:ft=markdown
